# Simple-Backup

./: .bzrignore  .project  .pydevproject  AUTHORS  COPYING  ChangeLog  HACKING  INSTALL  METAINFO  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  conversion-launchpad-git.txt  nssbackup.ChangeLog  setup.py.in
NSsbackup/: .project  .pydevproject  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  setup.py
NSsbackup/UML/sbackup/: 128116  128116.diagram  128244  128244.diagram  128372  128372.diagram  128500  128500.diagram  128628  sbackup.prj
NSsbackup/datas/: Makefile.in  multipleTarScript  nssbackup  nssbackup-config.desktop  nssbackup-config.glade  nssbackup-restore-su.desktop  nssbackup-restore.desktop  nssbackup-restore.glade  nssbackup.conf.example  nssbackup.desktop  sbackup  simple-backup-config.glade  simple-backup.8  simple-restore-gnome.glade  simple-restore.glade  srestore.desktop  su-nssbackup-config.desktop  su-nssbackup-restore.desktop
NSsbackup/datas/po/: ca.po  cs.po  de.po  en_GB.po  es.po  fr.po  gl.po  hu.po  id.po  it.po  lv.po  messages.pot  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
NSsbackup/debian/: changelog  control  copyright  dirs  menu  postinst  postrm  rules
NSsbackup/devtools/gladegen/: GladeGen.py  GladeGenConfig.py  SBConfigGTK.py
NSsbackup/doXygen/: sbackup-OOP.doxyfile
NSsbackup/nssbackup/: nssbackupd.py  ressources  sbackupd.py  srestore.py
NSsbackup/nssbackup/managers/: BackupManager.py  ConfigManager.py  FileAccessManager.py  FuseFAM.py  RestoreManager.py  SnapshotManager.py  UpgradeManager.py
NSsbackup/nssbackup/plugins/: __init__.py  ftpFuseFAM.py  localFuseFAM.py  smbFuseFAM.py  sshFuseFAM.py
NSsbackup/nssbackup/ui/: GladeWindow.py  SBConfigGTK.py  SBRestoreGTK.py  simple-restore-gnome.py
NSsbackup/nssbackup/util/: Snapshot.py  __init__.py  exceptions.py  log.py  structs.py  tar.py
NSsbackup/po/: ca.po  en_GB.po  lv.po  nb.po  sv.po  zh_CN.po
NSsbackup/sbackup/: sbackupd.py  srestore.py
NSsbackup/sbackup/managers/: BackupManager.py  ConfigManager.py  FileAccessManager.py  FuseFAM.py  RestoreManager.py  SnapshotManager.py  UpgradeManager.py
NSsbackup/sbackup/plugins/: __init__.py  ftpFuseFAM.py  localFuseFAM.py  sftpFuseFAM.py  sshFuseFAM.py
NSsbackup/sbackup/ui/: SBConfigGTK.py  simple-restore-gnome.py
NSsbackup/sbackup/util/: Snapshot.py  __init__.py  exceptions.py  log.py
NSsbackup/src/: Makefile.am  Makefile.in  nssbackup-restore-gui  upgrade-backups
NSsbackup/src/nssbackup/: nssbackupd.py  ressources.in
NSsbackup/src/nssbackup/managers/: BackupManager.py  ConfigManager.py  FileAccessManager.py  FuseFAM.py  RestoreManager.py  SnapshotManager.py  UpgradeManager.py
NSsbackup/src/nssbackup/plugins/: __init__.py
NSsbackup/src/nssbackup/ui/: GladeGnomeApp.py  SBConfigGTK.py  SBRestoreGTK.py
NSsbackup/src/nssbackup/util/: Snapshot.py  __init__.py  log.py  structs.py  tar.py
NSsbackup/tests/: Makefile.in  TestConfigManager.py  TestFuseFAM.py  TestPluginManager.py  TestRevertManager.py  TestSBdict.py  TestSnapshot.py  TestSnapshotManager.py  TestTar.py  TestUpgradeManager.py  testLog.py
NSsbackup/tests/test-datas/: createdirs.pl  files-2.snar  files.snar  sbackup.conf.fusefam
NSsbackup/tests/test-datas/backupdir/2007-05-17_13.45.45.609201.wattazoum-vm.ful/: excludes  files.tgz  flist  fprops  packages
NSsbackup/tests/test-datas/backupdir/2007-05-17_19.45.08.812921.wattazoum-vm.inc/: flist
NSsbackup/tests/test-datas/backupdir/2007-05-18_19.45.08.812921.wattazoum-vm.inc/: base
data/: apps_sbackup_global-preferences.schemas  nssbackup.conf.example  org.sbackupteam.SimpleBackup.conf  sbackup.conf.example
datas/: Makefile.am  nssbackup  nssbackup-config-su.desktop  nssbackup-config-su.desktop.in  nssbackup-config.desktop  nssbackup-config.desktop.in  nssbackup-config.glade  nssbackup-notify.in  nssbackup-notify.py  nssbackup-restore-su.desktop  nssbackup-restore-su.desktop.in  nssbackup-restore.desktop  nssbackup-restore.desktop.in  nssbackup-restore.glade  nssbackup.conf.example  nssbackup_service  nssbackup_traygui  org.sbackupteam.SimpleBackup.conf
debian/: README.Debian  changelog  control  copyright  docs  manpage.xml  menu  nssbackup-common.install  nssbackup-common.postinst  nssbackup-common.postrm  nssbackup-common.prerm  nssbackup-ftp.install  nssbackup-gtk.install  nssbackup-gtk.menu  nssbackup-plugins-fuse.install  nssbackup-ssh.install  postinst.ex  postrm.ex  preinst.ex  prerm  prerm.ex  rules  sbackup-common.install  sbackup-common.postinst  sbackup-common.postrm  sbackup-common.prerm  sbackup-ftp.install  sbackup-gtk.install  sbackup-gtk.manpage.xml  sbackup-gtk.menu  sbackup-gtk.postinst  sbackup-gtk.postrm  sbackup-plugins-fuse.install  sbackup-plugins-fuse.postinst  sbackup-ssh.install  sbackup.install  sbackup.postinst  sbackup.postrm
doc/: TESTING
po/: Makevars  POTFILES.in  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  fa.po  fi.po  fo.po  fr.po  gl.po  he.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  kw.po  lv.po  messages.pot  ms.po  nb.po  nl.po  nssbackup-ar.po  nssbackup-bg.po  nssbackup-ca.po  nssbackup-cs.po  nssbackup-de.po  nssbackup-en_GB.po  nssbackup-es.po  nssbackup-fr.po  (+33 more)
scripts/: multipleTarScript  nssbackup-config-gui.py  nssbackup-launch  nssbackup-restore-gui.py  nssbackup-upgrade-backups.py  nssbackupconfig.py  nssbackupd.py  sbackup-config-gui  sbackup-config-gui.py  sbackup-dbusservice  sbackup-indicator  sbackup-launch  sbackup-legacy-restore  sbackup-progress  sbackup-restore-gtk  sbackup-restore-gui.py  sbackup-terminate  sbackup-upgrade-backups.py  sbackup.py  sbackupconfig.py  sbackupd.py
src/: nssbackup-config-gui  nssbackup-restore-gui.py  nssbackup-tray-gui.py  nssbackup-upgrade-backups.py  nssbackup_dbus_service.py  nssbackupconfig.py  nssbackupd  nssbackupd.py  upgrade-backups  upgrade-backups.py
tests/: Makefile.am  Makefile.in  TestConfigManager.py  (+19 more)
(+229 files in other folders)
