nssbackup_pixmapsdir = $(prefix)/share/pixmaps
nssbackup_desktopdir = $(prefix)/share/applications
nssbackup_gladedir = $(prefix)/share/$(PACKAGE)
nssbackup_scriptdir = $(prefix)/share/$(PACKAGE)

nssbackup_pixmaps_DATA = nssbackup-restore.png nssbackup-conf.png
nssbackup_desktop_DATA = nssbackup-config.desktop nssbackup-restore.desktop nssbackup-config-su.desktop nssbackup-restore-su.desktop
nssbackup_glade_DATA = nssbackup-config.glade nssbackup-restore.glade
nssbackup_script_DATA = nssbackup

EXTRA_DIST = $(nssbackup_pixmaps_DATA) $(nssbackup_desktop_DATA) $(nssbackup_glade_DATA) $(nssbackup_script_DATA)
